--- a/index.html
+++ b/index.html
@@ -5,22 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
     <title>Tic Tac Toe</title>
 </head>
 <body>
     <header class="intro">
-        <h1>Play a game of tic tac toe!</h1>
+        <h1>Play a game of tic-tac-toe!</h1>
         <div class="player-info">
-            <h2 class="player">Player (X)</h2>
-            <h2 class="computer">Computer (O)</h2>
+            <h2 class="player">Player (<span id="player">X</span>)</h2>
+            <h2 class="computer">Bot (<span id="computer">O</span>)</h2>
         </div>
     </header>
-    <main class="grid-container" id="game-board">
-
-    </main>
-
-
-
+    <main class="grid-container" id="game-board"></main>
     <script src="script.js"></script>
 </body>
 </html>
