added responsive. finalized project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <title>Tic Tac Toe</title>
 </head>
 <body>
+    <section class="modal-bg">
+        <section class="modal-content">
+            <h1 id="winner"></h1>
+            <button id="restart">New Game</button>
+        </section>
+    </section>
     <header class="intro">
         <h1>Play a game of tic-tac-toe!</h1>
         <div class="player-info">
